# Central-bank-sentiment-and-stock-returns

./: .gitignore  01_fed_webscraping.R  02_sentiment_indices.R  03_stock returns.R  04_ellmer.R  ellmer_tests.qmd  pyproject.toml  utils.R
src/llmlong/: ollama_extract.py  text_to_chunks.py
workflow/: Snakefile  llm_sentiment.py  scrape_fed.py
